Add backend as submodule

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,19 +10,37 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+
+    # Logging
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
     access_log /var/log/nginx/access.log main;
-    sendfile on;
-    keepalive_timeout 65;
 
+    # Basic Settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+    client_max_body_size 64M;
+
+    # HTTP Server Block for initial setup
     server {
         listen 80;
-        server_name localhost;
+        listen [::]:80;
+        server_name seawave.tw;
 
+        # Certbot challenge location
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Temporary configuration without SSL
         location / {
             proxy_pass http://frontend:80;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -31,15 +49,104 @@ http {
 
         location /api {
             proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /webhook/ {
-            proxy_pass http://backend:8000/webhook/;
-            proxy_set_header Host $host;
+        location /wordpress {
+            root /var/www/html;
+            index index.php;
+            try_files $uri $uri/ /wordpress/index.php?$args;
+
+            location ~ \.php$ {
+                fastcgi_pass wordpress:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
+            }
         }
     }
+
+    # HTTPS Server Block (commented out for initial setup)
+    #server {
+    #    listen 443 ssl;
+    #    listen [::]:443 ssl;
+    #    server_name seawave.tw;
+    #
+    #    ssl_certificate /etc/letsencrypt/live/seawave.tw/fullchain.pem;
+    #    ssl_certificate_key /etc/letsencrypt/live/seawave.tw/privkey.pem;
+    #    ssl_protocols TLSv1.2 TLSv1.3;
+    #    ssl_ciphers HIGH:!aNULL:!MD5;
+    #
+    #    # Frontend Angular app
+    #    location / {
+    #        proxy_pass http://frontend:80;
+    #        proxy_http_version 1.1;
+    #        proxy_set_header Host $host;
+    #        proxy_set_header X-Real-IP $remote_addr;
+    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #        proxy_set_header X-Forwarded-Proto $scheme;
+    #        proxy_set_header Upgrade $http_upgrade;
+    #        proxy_set_header Connection "upgrade";
+    #    }
+    #
+    #    # Backend FastAPI
+    #    location /api {
+    #        proxy_pass http://backend:8000;
+    #        proxy_http_version 1.1;
+    #        proxy_set_header Host $host;
+    #        proxy_set_header X-Real-IP $remote_addr;
+    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #        proxy_set_header X-Forwarded-Proto $scheme;
+    #        proxy_connect_timeout 60s;
+    #        proxy_send_timeout 60s;
+    #        proxy_read_timeout 60s;
+    #    }
+    #
+    #    # Webhook
+    #    location /webhook/ {
+    #        proxy_pass http://backend:8000/webhook/;
+    #        proxy_http_version 1.1;
+    #        proxy_set_header Host $host;
+    #        proxy_set_header X-Real-IP $remote_addr;
+    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #        proxy_set_header X-Forwarded-Proto $scheme;
+    #        proxy_connect_timeout 60s;
+    #        proxy_send_timeout 60s;
+    #        proxy_read_timeout 60s;
+    #    }
+    #
+    #    # WordPress (under /wordpress path)
+    #    location /wordpress {
+    #        root /var/www/html;
+    #        index index.php;
+    #        try_files $uri $uri/ /wordpress/index.php?$args;
+    #
+    #        location ~ \.php$ {
+    #            fastcgi_pass wordpress:9000;
+    #            fastcgi_index index.php;
+    #            include fastcgi_params;
+    #            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #            fastcgi_param PATH_INFO $fastcgi_path_info;
+    #        }
+    #    }
+    #
+    #    # WordPress API and admin
+    #    location ~ ^/wp(-json|/admin|/login|/content|/includes) {
+    #        root /var/www/html;
+    #        try_files $uri $uri/ /index.php?$args;
+    #
+    #        location ~ \.php$ {
+    #            fastcgi_pass wordpress:9000;
+    #            fastcgi_index index.php;
+    #            include fastcgi_params;
+    #            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #            fastcgi_param PATH_INFO $fastcgi_path_info;
+    #        }
+    #    }
+    #}
 }
